# papageno

./: .gitignore  404.html  CNAME  Gemfile  README.md  _config.yml  build.gradle  index.html  privacy.html  settings.gradle
_layouts/: default.html
app/: .gitignore  README.md  analysis_options.yaml  build.gradle  pubspec.yaml  translations.csv  update_icon.sh
app/android/: build.gradle  gradle.properties  settings.gradle
app/android/all_species/: build.gradle
app/android/app/: build.gradle
app/artwork/: export.sh
app/assets/: .gitattributes  app.db
app/assets/licenses/: gplv3.txt
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: appdb.dart  main.dart  model.dart  revealing_image.dart  strings.dart
app/lib/common/: localization.dart  log_writer.dart  (+4 more)
app/test/: testdata.dart  widget_test.dart
assets/css/: style.scss
common/: build.gradle
data/: .gitignore  .pylintrc  README.md  analysis.ipynb  analysis.py  analyze_recordings.py  base.py  cities.py  create_regions.py  db.py  ebd_download.sh  ebd_filesize.sh  fetch_audio_files.py  fetcher.py  images.py  ioc_find.py  ioc_translate.py  lazy.py  list_species.py  load_images.py  load_recordings.py  load_regions.py  load_species.py  manage.py  master.py  progress.py  pylint  pylintrc  pyproject.toml  recording_overrides.csv  recording_selection.ipynb  recording_selection.py  recordings.ipynb  recordings.py  recordings_blacklist.txt  regions.py  regions_to_gpkg.py  regions_to_gpkg.sh  requirements.txt  select_cities.py  (+24 more)
data/console/: settings.py  urls.py  wsgi.py
data/cornell/: Clements-Checklist-v2017-August-2017_2.xlsx  README.md  eBird-Clements-integrated-checklist-v2017.xlsx  eBird_Taxonomy_v2017_18Aug2017.xlsx
data/ebd_aggregator/: Cargo.toml
data/ebd_aggregator/src/: main.rs
data/eod_aggregator/: Cargo.toml
data/eod_aggregator/src/: main.rs
data/ioc/: ioc.py
data/manual/: Vogels_van_Europa_ANWB_Natuurwijzer_2005.txt
data/names/: README.md
data/old/: ioc_find.py  ioc_translate.py  pylint  xc_remap.py
data/old/console/: settings.py  wsgi.py
data/old/ioc/: .gitattributes  IOC_8.2_vs_other_lists.xlsx  Multiling IOC 8.2.xlsx  ioc.py
data/old/manual/: README.md  Vogels_van_Europa_ANWB_Natuurwijzer_2005_xc.txt
data/old/xenocanto/: admin.py  apps.py  models.py  readers.py  tests.py
data/old/xenocanto/management/commands/: analyze_audio.py  play_recordings.py  preselect_recordings.py
data/old/xenocanto/migrations/: 0001_initial.py  0002_auto_20180721_1546.py  0003_auto_20180721_1552.py  0004_auto_20180722_2049.py  0006_auto_20180722_2113.py
data/old/xenocanto/templates/xenocanto/: species.html
data/old/xenocanto/templatetags/: translated_name.py
data/qgis/: .gitignore  ne_10m_land.qix  regions.gpkg  regions.qgz
data/sources/: .gitattributes  .gitignore  IOC_9.1_vs_other_lists.xlsx  Multiling IOC 9.1b.xlsx  ebd_regions.csv  eod_species_list.csv  mcd.hdf  regions.gpkg  regions.qgz
data/templates/: _base.html  root.html  species.html  species_list.html
data/xenocanto/: admin.py  apps.py  audio.py  cache  cache.py  models.py  readers.py  selection.py  urls.py  views.py  xenocanto.py
data/xenocanto/management/: base.py
data/xenocanto/management/commands/: analyze_audio.py  import_from_cache.py  import_ioc.py  import_recordings.py  play_recordings.py  preselect_recordings.py  select_recordings.py
data/xenocanto/migrations/: 0005_auto_20180722_2058.py  0007_audiofile.py  0007_auto_20180806_1454.py
data/xenocanto/static/: style.css
data/xenocanto/templates/xenocanto/: index.html  species_list.html
data/xenocanto/templatetags/: query_url.py  translated_name.py
experiment/: halflife.py  halflife_distribution.ipynb  pyproject.toml
gradle/wrapper/: gradle-wrapper.properties
tools/: build.gradle
(+96 files in other folders)
