[tool.poetry]
name = "papageno_data"
version = "1.0.0"
description = "Data processing for Papageno Birdsong Tutor"
license = "GPL-3.0-or-later"
authors = ["Thomas ten Cate <ttencate@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6.1"
urllib3 = "^1.25.8"
openpyxl = "^3.0.3"
sqlalchemy = "^1.3.16"
gdal = "^3.0.4"
flask = "^1.1.2"
imageio = "^2.8.0"
beautifulsoup4 = "^4.9.0"
pillow = "^7.1.1"
lxml = "^4.5.0"
pydub = "^0.23.1"
matplotlib = "^3.2.1"
Rtree = "^0.9.4"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"
jupyter = "^1.0.0"
notebook = "^6.1.5"
tqdm = "^4.52.0"
scipy = "^1.5.4"
librosa = "^0.8.0"
ffmpeg = "^1.4"
audioread = "^2.1.9"
pygobject = "^3.38.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
