[tool.poetry]
name = "papageno_data"
version = "1.0.0"
description = "Data processing for Papageno Birdsong Tutor"
license = "GPL-3.0-or-later"
authors = ["Thomas ten Cate <ttencate@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
# llvmlite, a dependency of numba, a dependency of librosa, is not yet
# compatible with Python 3.9: https://github.com/numba/numba/issues/6345
# Until that gets resolved and released, we'll have to restrict ourselves to
# older Python versions and install python38 from AUR.
python = "^3.6.2, <3.9"
urllib3 = "^1.25.8"
openpyxl = "^3.0.3"
sqlalchemy = "^1.3.16"
# Pinned gdal to the current version in Arch, which has been out of date for
# months. Apparently the Python package is not self-contained...
gdal = "==3.0.4"
flask = "^1.1.2"
imageio = "^2.8.0"
beautifulsoup4 = "^4.9.0"
pillow = "^7.1.1"
lxml = "^4.5.0"
pydub = "^0.23.1"
matplotlib = "^3.2.1" # TODO move to dev-dependencies
Rtree = "^0.9.4"
scipy = "^1.5.4"
librosa = "^0.8.0"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"
notebook = "^6.1.5"
tqdm = "^4.52.0"
jupyterlab = "^3.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
