[tool.poetry]
name = "papageno_data"
version = "1.0.0"
description = "Data processing for Papageno Birdsong Tutor"
license = "GPL-3.0-or-later"
authors = ["Thomas ten Cate <ttencate@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6.1"
urllib3 = "^1.25.8"
openpyxl = "^3.0.3"
sqlalchemy = "^1.3.16"
gdal = "==3.0.4" # Arch Linux package has been out of date for a long time...
flask = "^1.1.2"
imageio = "^2.8.0"
beautifulsoup4 = "^4.9.0"
pillow = "^7.1.1"
lxml = "^4.9.1"
pydub = "^0.23.1"
matplotlib = "^3.2.1"
Rtree = "^0.9.4"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
