[tool.poetry]
name = "experiment"
version = "0.1.0"
description = ""
authors = ["Thomas ten Cate <ttencate@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ebisu = "^2.0.0"
matplotlib = "^3.2.1"
scipy = "^1.4.1"
jupyter = "^1.0.0"
notebook = "^6.4.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
