[package]
name = "eod_aggregator"
version = "0.1.0"
authors = ["Thomas ten Cate <ttencate@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
# HDF5 version 1.12.0 is not supported yet: https://github.com/aldanor/hdf5-rust/issues/94
# Use someone's unmerged pull request until that gets fixed and released.
hdf5 = { git = "https://github.com/mulimoen/hdf5-rust", branch = "feature/hdf5-1.12.0" }
# hdf5 = "0.6.1"
structopt = "0.3"
zip = "0.5"
